# rgblib2

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.release  update_cmake_sources.sh
scripts/: init-local-dev.sh  update-cmake-sources.sh  update_cmake_sources.sh
src/app/: Application.h  ApplicationBuilder.h
src/car/: OBD.cpp  OBD.h  Vehicle.cpp  Vehicle.h  VehicleApplication.cpp  VehicleApplication.h  VehicleApplicationBuilder.h  VehicleApplicationConfigurer.h
src/core/: App.cpp  App.h  AppBuilder.cpp  AppBuilder.h  Application.cpp  Application.h  Assertions.h  Brightness.cpp  Brightness.h  Clock.cpp  Clock.h  ClockTime.h  Color.h  Config.h  Debug.cpp  Debug.h  Enumerate.h  Every.h  Func.h  GPIO.h  Handle.h  Iterable.h  Log.cpp  Log.h  NullScene.cpp  NullScene.h  Pin.cpp  Pin.h  Point.h  Scene.h  System.h  Trigger.h  Types.h  Util.h
src/core/event/: EventBus.h  EventConcept.h  EventType.h  SystemEvents.h
src/core/led/: LEDMatrix.h  LEDMatrix2.h  LEDStrip.h
src/core/network/: OTA.cpp  OTA.h  OTAImpl.cpp  OTAImpl.h
src/core/network/priv/: OTAESP32.cpp  OTAESP32.h
src/core/pixel/: ContiguousPixelList.cpp  ContiguousPixelList.h  DeadPixelList.cpp  DeadPixelList.h  PixelGrid.cpp  PixelGrid.h  PixelList.cpp  PixelList.h  PixelSlice.cpp  PixelSlice.h  PixelStitch.cpp  PixelStitch.h  ReversePixelList.cpp  ReversePixelList.h
src/core/priv/: GPIOBase.h  GPIOESP32.h  GPIOImpl.h  HostSystemBase.h  HostSystemESP32.h  HostSystemImpl.h  LoggingSystem.h  LoggingSystemBase.cpp  LoggingSystemBase.h
src/core/sensor/: Button.cpp  Button.h  IRButton.cpp  IRButton.h  IRButtonType.h  IRRemote.cpp  IRRemote.h  Sensor.cpp  Sensor.h  SensorConcept.h
src/core/threading/: CircularCommandQueue.cpp  CircularCommandQueue.h  CircularIndex.cpp  CircularIndex.h  CircularLog.h
src/core/time/: Stopwatch.cpp  Timer.cpp  Timer.h  TimerHandle.cpp  TimerHandle.h  TimerNode.cpp
src/effect/: ChaseProgression.h  ChasingEffect.cpp  ChasingEffect.h  ChasingEffectConstantTime.cpp  ChasingEffectConstantTime.h  ChasingEffectV2.cpp  ChasingEffectV2.h  Effect.h  EffectHandle.cpp  EffectHandle.h  EffectNode.h  Effects.cpp  Effects.h  FillEffect.cpp  FillEffect.h  Length.h  TrailingEffect.cpp  TrailingEffect.h
src/event/: Event.h
src/home/hub/: HubApplication.cpp  HubApplication.h  HubRenderer.cpp  HubRenderer.h  HubTask.h  HubUI.cpp  HubUI.h
src/home/lite/: LiteApplication.cpp  LiteApplication.h
src/home/node/: NodeApplication.cpp  NodeApplication.h
src/led/: LEDCircuit.h  LEDCore.h  LEDMatrix.h  LEDMatrix2.h  LEDStrip.h  MatrixStrategy.h  Pixel.h  PixelGrid.h  PixelList.cpp  PixelList.h  PixelSlice.cpp  PixelSlice.h
src/main/: CMakeLists.txt  CustomEvents.h  LEDs.h  LincolnApplication.h  MyApplication.h  idf_component.yml  main.cpp  main2.cpp  main3.cpp
src/sensor/: ButtonState.h  IRButtonType.h  OBD.cpp  OBD.h  Pin.cpp  Pin.h  PushButton.cpp  PushButton.h  Vehicle.cpp  Vehicle.h
src/system/: System.h
src/time/: Stopwatch.cpp  Stopwatch.h  Timer.cpp  Timer.h  TimerHandle.h  TimerNode.h
templates/generic-subsystem/priv/: SubsystemImpl.hpp
templates/subsystem/: Subsystem.hpp
templates/subsystem/priv/: SubsystemBase.hpp  SubsystemESP32.hpp
