idf_component_register(
        REQUIRES
        spi_flash led_strip esp_timer driver esp_https_ota nvs_flash esp_wifi

        SRCS
        "main.cpp"

        "../car/OBD.cpp"
        "../car/OBD.h"
        "../car/Vehicle.cpp"
        "../car/Vehicle.h"
        "../car/VehicleApplication.h"
        "../car/VehicleApplicationConfigurer.h"

        "../core/Application.cpp"
        "../core/Application.h"
        "../core/Assertions.h"
        "../core/Brightness.cpp"
        "../core/Brightness.h"
        "../core/Clock.cpp"
        "../core/Clock.h"
        "../core/Color.h"
        "../core/Config.h"
        "../core/Debug.cpp"
        "../core/Debug.h"
        "../core/Enumerate.h"
        "../core/Every.h"
        "../core/Func.h"
        "../core/GPIO.h"
        "../core/Handle.h"
        "../core/Iterable.h"
        "../core/Log.cpp"
        "../core/Log.h"
        "../core/NullScene.cpp"
        "../core/NullScene.h"
        "../core/Pin.cpp"
        "../core/Pin.h"
        "../core/Point.h"
        "../core/Scene.h"
        "../core/System.h"
        "../core/Trigger.h"
        "../core/Types.h"
        "../core/Util.h"
        "../core/event/EventBus.h"
        "../core/event/EventType.h"
        "../core/event/SystemEvents.h"
        "../core/led/LEDCircuit.h"
        "../core/led/LEDCore.h"
        "../core/led/LEDMatrix.h"
        "../core/led/LEDMatrix2.h"
        "../core/led/LEDStrip.h"
        "../core/led/MatrixStrategy.h"
        "../core/network/OTA.cpp"
        "../core/network/OTA.h"
        "../core/network/OTAImpl.cpp"
        "../core/network/OTAImpl.h"
        "../core/network/priv/OTAESP32.cpp"
        "../core/network/priv/OTAESP32.h"
        "../core/pixel/ContiguousPixelList.cpp"
        "../core/pixel/ContiguousPixelList.h"
        "../core/pixel/DeadPixelList.cpp"
        "../core/pixel/DeadPixelList.h"
        "../core/pixel/Pixel.h"
        "../core/pixel/PixelGrid.cpp"
        "../core/pixel/PixelGrid.h"
        "../core/pixel/PixelList.cpp"
        "../core/pixel/PixelList.h"
        "../core/pixel/PixelSlice.cpp"
        "../core/pixel/PixelSlice.h"
        "../core/pixel/PixelStitch.cpp"
        "../core/pixel/PixelStitch.h"
        "../core/pixel/ReversePixelList.cpp"
        "../core/pixel/ReversePixelList.h"
        "../core/priv/GPIOBase.h"
        "../core/priv/GPIOESP32.h"
        "../core/priv/GPIOImpl.h"
        "../core/priv/HostSystemBase.h"
        "../core/priv/HostSystemESP32.h"
        "../core/priv/HostSystemImpl.h"
        "../core/priv/LoggingSystem.h"
        "../core/priv/LoggingSystemBase.cpp"
        "../core/priv/LoggingSystemBase.h"
        "../core/sensor/Button.cpp"
        "../core/sensor/Button.h"
        "../core/sensor/ButtonState.h"
        "../core/sensor/IRButton.cpp"
        "../core/sensor/IRButton.h"
        "../core/sensor/IRButtonType.h"
        "../core/sensor/IRRemote.cpp"
        "../core/sensor/IRRemote.h"
        "../core/sensor/PushButton.cpp"
        "../core/sensor/PushButton.h"
        "../core/sensor/Sensor.cpp"
        "../core/sensor/Sensor.h"
        "../core/sensor/SensorConcept.h"
        "../core/threading/CircularCommandQueue.cpp"
        "../core/threading/CircularCommandQueue.h"
        "../core/threading/CircularIndex.cpp"
        "../core/threading/CircularIndex.h"
        "../core/threading/CircularLog.h"
        "../core/time/Stopwatch.cpp"
        "../core/time/Stopwatch.h"
        "../core/time/Timer.cpp"
        "../core/time/Timer.h"
        "../core/time/TimerHandle.cpp"
        "../core/time/TimerHandle.h"
        "../core/time/TimerNode.h"

        "../effect/ChasingEffect.cpp"
        "../effect/ChasingEffect.h"
        "../effect/ChasingEffectConstantTime.cpp"
        "../effect/ChasingEffectConstantTime.h"
        "../effect/FillEffect.cpp"
        "../effect/FillEffect.h"
        "../effect/Length.h"

        "../home/hub/HubApplication.cpp"
        "../home/hub/HubApplication.h"
        "../home/hub/HubRenderer.cpp"
        "../home/hub/HubRenderer.h"
        "../home/hub/HubTask.h"
        "../home/hub/HubUI.cpp"
        "../home/hub/HubUI.h"
        "../home/node/NodeApplication.cpp"
        "../home/node/NodeApplication.h"

        INCLUDE_DIRS
        "../car"
        "../core"
        "../core/debug"
        "../core/event"
        "../core/led"
        "../core/network"
        "../core/pixel"
        "../core/sensor"
        "../core/threading"
        "../core/time"
        "../effect"
        "../home"
        "../home/hub"
        "../home/node"

        PRIV_INCLUDE_DIRS
        "../core/network/priv"
        "../core/priv"
)






target_compile_definitions(${COMPONENT_LIB} PUBLIC
        RGB_DEBUG
        CONFIG_FREERTOS_HZ=1000
        RGB_OTHER_CORE_STACK_SIZE=8192
        RGB_OTHER_CORE_PRIORITY=3
)
target_compile_options(${COMPONENT_LIB} PRIVATE
        -Werror=switch
)
